set for android
	modified:   .gitignore
	deleted:    src/app/admin/admin.component.tns.scss
	deleted:    src/app/admin/admin.module.tns.ts
	deleted:    src/app/admin/layout/footer/footer.component.tns.scss
	deleted:    src/app/admin/layout/header/header.component.tns.scss
	modified:   src/app/app-routing.module.tns.ts
	modified:   src/app/app.component.tns.html
	new file:   src/app/app.component.tns.scss
	new file:   src/app/app.component.tns.ts
	modified:   src/app/app.module.tns.ts
	modified:   src/app/home/home-routing.module.tns.ts
	modified:   src/app/home/home.component.tns.html
	new file:   src/app/home/home.component.tns.scss
	new file:   src/app/home/home.component.tns.ts
	modified:   src/app/home/home.module.tns.ts
	modified:   src/app/home/home.module.ts
	new file:   src/app/home/login/login.component.tns.ts
	new file:   src/app/home/main/main.component.html
	new file:   src/app/home/main/main.component.scss
	new file:   src/app/home/main/main.component.spec.ts
	new file:   src/app/home/main/main.component.tns.html
	renamed:    src/app/admin/main/main.component.tns.scss -> src/app/home/main/main.component.tns.scss
	new file:   src/app/home/main/main.component.tns.ts
	new file:   src/app/home/main/main.component.ts
	modified:   tsconfig.tns.json

--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<ActionBar [title]="title"></ActionBar>
 <StackLayout  class="p-20">
     <Label [text]="'Welcome to ' + title + '!'" class="h1 text-center" textWrap="true"></Label>
+    <page-router-outlet actionBarVisibility="never"></page-router-outlet>
 </StackLayout>
