--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,3 +1,5 @@
-<GridLayout>
-  <page-router-outlet></page-router-outlet>
-</GridLayout>
+<Page>
+  <StackLayout>
+      <page-router-outlet actionBarVisibility="never"></page-router-outlet>
+  </StackLayout>
+</Page>
