--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,33 @@
 
 // Import common styles
 @import 'app-common';
+
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+ul, li, ol{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    color: #000;
+    text-decoration: none !important;
+}
+
+img, fieldset, button, input {
+    border: 0 none;
+    background-color: transparent;
+}
+  
+  img, input, select, textarea {
+    vertical-align: middle;
+}
+  
+  address, em {
+    font-style: normal;
+}
