--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
     <as-split useTransition="true" gutterSize="0" unit="pixel">
-        <as-split-area size="100" minSize="50" order="1" visible="true">
-            <admin-sidebar></admin-sidebar>
+        <as-split-area [size]="sideSize" minSize="50" order="1" visible="true">
+            <admin-sidebar (onFolded)="changeSize($event)"></admin-sidebar>
         </as-split-area>
         <as-split-area size="*" order="2" visible="true">
             <router-outlet></router-outlet>
