--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,5 @@ img, fieldset, button, input {
   address, em {
     font-style: normal;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
