기본 레이아웃 구성 모바일 하단 메뉴 반응형 추가 	modified:   src/app/admin/admin.component.html 	modified:   src/app/admin/admin.component.scss 	modified:   src/app/admin/admin.component.ts 	modified:   src/app/admin/admin.module.ts 	modified:   src/app/admin/layout/footer/footer.component.html 	modified:   src/app/admin/layout/footer/footer.component.scss 	modified:   src/app/admin/layout/footer/footer.component.ts 	modified:   src/app/admin/layout/header/header.component.html 	modified:   src/app/admin/layout/header/header.component.scss 	modified:   src/app/admin/layout/header/header.component.ts 	modified:   src/app/admin/reservation/reservation.component.html 	modified:   src/app/admin/reservation/reservation.component.ts 	modified:   src/app/admin/stock/stock.component.html 	modified:   src/app/admin/stock/stock.component.ts 	modified:   src/app/admin/unit/unit.component.html 	modified:   src/app/admin/unit/unit.component.ts 	modified:   src/styles.scss

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,14 @@
-<div id="wrapper">
+<div id="wrapper" #wrapper>
     <as-split useTransition="true" gutterSize="0" unit="pixel">
-        <as-split-area [size]="sideSize" minSize="50" order="1" visible="true">
+        <as-split-area [size]="sideSize" minSize="0" order="1" visible="true">
             <admin-sidebar (onFolded)="changeSize($event)"></admin-sidebar>
         </as-split-area>
         <as-split-area size="*" order="2" visible="true">
-            <router-outlet></router-outlet>
+            <admin-header></admin-header>
+            <div class="content-wrapper">
+                <router-outlet></router-outlet>
+            </div>
+            <admin-footer *ngIf="sideSize === 0"></admin-footer>
         </as-split-area>
     </as-split>
 </div>
