--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,3 +1,14 @@
 #wrapper{
     height: 100%;
+    position: relative;
+}
+
+.content-wrapper{
+    padding: 0 20px;
+}
+
+admin-footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
