--- a/src/app/admin/unit/unit.component.html
+++ b/src/app/admin/unit/unit.component.html
@@ -1,1 +1,8 @@
-<p>unit works!</p>
+<div>
+    <h2>{{title}}</h2>
+    <mat-tab-group animationDuration="2ms">
+        <mat-tab label="사업장">
+            사업장
+        </mat-tab>
+    </mat-tab-group>
+</div>
