--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,7 @@ img, fieldset, button, input {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1, h2, h3, h4, h5, h6{
+    color: #1b3a57;
+    margin-bottom: 2px;
+}
