--- a/src/app/admin/stock/stock.component.html
+++ b/src/app/admin/stock/stock.component.html
@@ -1,1 +1,11 @@
-<p>stock works!</p>
+<div>
+    <h2>{{title}}</h2>
+    <mat-tab-group animationDuration="2ms">
+        <mat-tab label="리스트">
+            리스트
+        </mat-tab>
+        <mat-tab label="디테일">
+            디테일
+        </mat-tab>
+    </mat-tab-group>
+</div>
