회원 가입 폼 생성 	modified:   src/app/app.module.ts 	new file:   src/app/global/global.d.ts 	new file:   src/app/global/global.ts 	modified:   src/app/home/home-routing.module.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/home.module.ts 	new file:   src/app/home/login/join/join.component.html 	new file:   src/app/home/login/join/join.component.scss 	new file:   src/app/home/login/join/join.component.spec.ts 	new file:   src/app/home/login/join/join.component.tns.html 	new file:   src/app/home/login/join/join.component.tns.scss 	new file:   src/app/home/login/join/join.component.ts 	modified:   src/app/home/login/login.component.html 	modified:   src/app/home/login/login.component.scss 	modified:   src/app/home/login/login.component.ts 	modified:   src/styles.scss 	modified:   tsconfig.json 	modified:   tsconfig.server.json

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,7 @@ h1, h2, h3, h4, h5, h6{
     color: #1b3a57;
     margin-bottom: 2px;
 }
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
