--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,3 +1,16 @@
-<p>login works!</p>
-<a routerLink="/">back to home</a>
-<a routerLink="/admin/main">go to main</a>
+<div class="content-wrapper">
+    <div class="login-container">
+        <h2>Movila Login</h2>
+        <div class="login-content">
+            <form [formGroup]="loginform" class="flex-column">
+                <input type="text" formControlName="id" placeholder="아이디">
+                <input type="text" formControlName="pwd" placeholder="패스워드">
+                <mat-checkbox color="primary">로그인 유지</mat-checkbox>
+                <button type="submit">로그인</button>
+            </form>
+            <a routerLink="">아이디찾기</a><span> / </span>
+            <a routerLink="">비밀번호찾기</a><span> / </span>
+            <a routerLink="/join">회원가입</a>
+        </div>
+    </div>
+</div>
