--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="config-board" *ngIf="showBoard">
         <ul>
             <li><a routerLink="">프로필</a></li>
-            <li><a routerLink="/login">로그아웃</a></li>
+            <li><a (click)="signOut()">로그아웃</a></li>
         </ul>
     </div>
 </div>
