--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -3,10 +3,12 @@
         <h2>Movila Login</h2>
         <div class="login-content">
             <form [formGroup]="loginform" class="flex-column">
-                <input type="text" formControlName="id" placeholder="아이디">
-                <input type="text" formControlName="pwd" placeholder="패스워드">
-                <mat-checkbox color="primary">로그인 유지</mat-checkbox>
-                <button type="submit">로그인</button>
+                <input type="text" formControlName="LoginId" placeholder="아이디"
+                    [ngStyle]="{'border-color': checkValid('LoginId') ? '#f00' : '#ddd'}">
+                <input type="text" formControlName="Pwd" placeholder="패스워드"
+                    [ngStyle]="{'border-color': checkValid('Pwd') ? '#f00' : '#ddd'}">
+                <mat-checkbox color="primary" formControlName="stayChecked">로그인 유지</mat-checkbox>
+                <button type="submit" (click)="signIn()">로그인</button>
             </form>
             <a routerLink="">아이디찾기</a><span> / </span>
             <a routerLink="">비밀번호찾기</a><span> / </span>
