새로고침 세션 관리 보완 프로필 > 제휴사 정보 입력 생성 사용자용 API 서비스 생성
	modified:   src/app/admin/admin-routing.module.ts
	modified:   src/app/admin/admin.component.html
	modified:   src/app/admin/admin.component.scss
	modified:   src/app/admin/admin.module.ts
	new file:   src/app/admin/info/mypage/mypage.component.html
	new file:   src/app/admin/info/mypage/mypage.component.scss
	new file:   src/app/admin/info/mypage/mypage.component.spec.ts
	new file:   src/app/admin/info/mypage/mypage.component.tns.html
	new file:   src/app/admin/info/mypage/mypage.component.tns.scss
	new file:   src/app/admin/info/mypage/mypage.component.ts
	new file:   src/app/admin/info/profile/profile.component.html
	new file:   src/app/admin/info/profile/profile.component.scss
	new file:   src/app/admin/info/profile/profile.component.spec.ts
	new file:   src/app/admin/info/profile/profile.component.tns.html
	new file:   src/app/admin/info/profile/profile.component.tns.scss
	new file:   src/app/admin/info/profile/profile.component.ts
	modified:   src/app/admin/layout/header/header.component.html
	modified:   src/app/admin/layout/header/header.component.ts
	modified:   src/app/app.component.ts
	modified:   src/app/app.module.tns.ts
	modified:   src/app/global/global.ts
	modified:   src/app/global/static-variable.ts
	modified:   src/app/home/login/join/join.component.scss
	modified:   src/app/home/login/login.component.ts
	modified:   src/app/service/auth.guard.ts
	modified:   src/app/service/post-api.service.ts
	modified:   src/app/service/session.service.ts
	modified:   src/styles.scss
	modified:   tsconfig.json

--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="header-container">
     <button class="user-config" (click)="showBoard = !showBoard">
-        사
+        {{ user ? user.MemNm.charAt(0) : '사' }}
     </button>
     <div class="config-board" *ngIf="showBoard">
         <ul>
-            <li><a routerLink="">프로필</a></li>
+            <li><a routerLink="/admin/mypage">프로필</a></li>
             <li><a (click)="signOut()">로그아웃</a></li>
         </ul>
     </div>
