--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,11 +4,13 @@
             <admin-sidebar (onFolded)="changeSize($event)"></admin-sidebar>
         </as-split-area>
         <as-split-area size="*" order="2" visible="true">
-            <admin-header></admin-header>
-            <div class="content-wrapper">
-                <router-outlet></router-outlet>
+            <div class="flex-column">
+                <admin-header></admin-header>
+                <div class="content-wrapper">
+                    <router-outlet></router-outlet>
+                </div>
+                <admin-footer *ngIf="sideSize === 0"></admin-footer>
             </div>
-            <admin-footer *ngIf="sideSize === 0"></admin-footer>
         </as-split-area>
     </as-split>
 </div>
