--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -5,10 +5,14 @@
 
 .content-wrapper{
     padding: 0 20px;
+    height: calc(100% - 20px);
+    margin-bottom: 50px;
+    padding-bottom: 20px;
 }
 
 admin-footer{
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 3;
 }
