--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,31 @@ h1, h2, h3, h4, h5, h6{
     display: flex;
     flex-direction: column;
 }
+
+.mat-expansion-panel-header{
+    border-radius: initial !important;
+    border-bottom: 1px solid #ddd;
+    background-color: #f6f6f6;
+
+    &:focus, &:hover{ background-color: #f6f6f6 !important; }
+}
+
+.text-error{
+    font-size: 12px;
+    color: #f00;
+}
+
+.form-regular{
+    input{
+        margin: 5px 0;
+        height: 50px;
+        text-indent: 2px;
+        border: 2px solid #ddd;
+        border-radius: 5px;
+    }
+}
+
+.content-border{
+    border: 1px solid #ddd;
+    padding: 10px;
+}
