--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -4,7 +4,7 @@
     </button>
     <div class="config-board" *ngIf="showBoard">
         <ul>
-            <li><a routerLink="/admin/mypage">프로필</a></li>
+            <li><a routerLink="/admin/mypage" (click)="showBoard = false">프로필</a></li>
             <li><a (click)="signOut()">로그아웃</a></li>
         </ul>
     </div>
