--- a/src/app/admin/unit/unit.component.html
+++ b/src/app/admin/unit/unit.component.html
@@ -2,7 +2,7 @@
     <h2>{{title}}</h2>
     <mat-tab-group animationDuration="2ms">
         <mat-tab label="사업장">
-            사업장
+            <button mat-raised-button (click)="openAdd()">숙소 추가</button>
         </mat-tab>
     </mat-tab-group>
 </div>
