--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -10,7 +10,7 @@
                 <mat-checkbox color="primary" formControlName="stayChecked">로그인 유지</mat-checkbox>
                 <button type="submit" (click)="signIn()">로그인</button>
             </form>
-            <a routerLink="">아이디찾기</a><span> / </span>
+            <a routerLink="/admin">아이디찾기</a><span> / </span>
             <a routerLink="">비밀번호찾기</a><span> / </span>
             <a routerLink="/join">회원가입</a>
         </div>
