--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,3 +70,23 @@ h1, h2, h3, h4, h5, h6{
     border: 1px solid #ddd;
     padding: 10px;
 }
+
+.full-screen-modal{
+    width: 100%;
+    .mat-dialog-container{
+        transition: all 1s;
+        background-color: #f6f6f6;
+
+    }
+}
+.matchip-container{
+    margin: 20px 0;
+    .mat-chip{cursor: pointer;}
+}
+
+.btn-box{
+    button{
+        float: right;
+        margin: 10px;
+    }
+}
