--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,3 +90,37 @@ h1, h2, h3, h4, h5, h6{
         margin: 10px;
     }
 }
+
+/* margin */
+.mgt0{margin-top: 0;}
+.mgt5{margin-top: 5px;}
+.mgt10{margin-top: 10px;}
+.mgt15{margin-top: 15px;}
+.mgt20{margin-top: 20px;}
+.mgt30{margin-top: 30px;}
+.mgt40{margin-top: 40px;}
+.mgt50{margin-top: 50px;}
+.mgb0{margin-bottom: 0;}
+.mgb5{margin-bottom: 5px;}
+.mgb10{margin-bottom: 10px;}
+.mgb15{margin-bottom: 15px;}
+.mgb20{margin-bottom: 20px;}
+.mgb30{margin-bottom: 30px;}
+.mgb40{margin-bottom: 40px;}
+.mgb50{margin-bottom: 50px;}
+.mgl0{margin-left: 0;}
+.mgl5{margin-left: 5px;}
+.mgl10{margin-left: 10px;}
+.mgl15{margin-left: 15px;}
+.mgl20{margin-left: 20px;}
+.mgl30{margin-left: 30px;}
+.mgl40{margin-left: 40px;}
+.mgl50{margin-left: 50px;}
+.mgr0{margin-right: 0;}
+.mgr5{margin-right: 5px;}
+.mgr10{margin-right: 10px;}
+.mgr15{margin-right: 15px;}
+.mgr20{margin-right: 20px;}
+.mgr30{margin-right: 30px;}
+.mgr40{margin-right: 40px;}
+.mgr50{margin-right: 50px;}
