객실 목록 및 등록 화면 생성 라우터 변경 	new file:   src/app/admin/accom/unit/edit/edit.component.html 	new file:   src/app/admin/accom/unit/edit/edit.component.scss 	renamed:    src/app/admin/unit/add/add.component.spec.ts -> src/app/admin/accom/unit/edit/edit.component.spec.ts 	new file:   src/app/admin/accom/unit/edit/edit.component.tns.html 	renamed:    src/app/admin/unit/add/add.component.tns.scss -> src/app/admin/accom/unit/edit/edit.component.tns.scss 	new file:   src/app/admin/accom/unit/edit/edit.component.ts 	new file:   src/app/admin/accom/unit/list/list.component.html 	renamed:    src/app/admin/unit/unit.component.scss -> src/app/admin/accom/unit/list/list.component.scss 	new file:   src/app/admin/accom/unit/list/list.component.spec.ts 	new file:   src/app/admin/accom/unit/list/list.component.tns.html 	renamed:    src/app/admin/unit/unit.component.tns.scss -> src/app/admin/accom/unit/list/list.component.tns.scss 	new file:   src/app/admin/accom/unit/list/list.component.ts 	new file:   src/app/admin/accom/unit/unit.component.html 	new file:   src/app/admin/accom/unit/unit.component.scss 	renamed:    src/app/admin/unit/unit.component.spec.ts -> src/app/admin/accom/unit/unit.component.spec.ts 	renamed:    src/app/admin/unit/unit.component.tns.html -> src/app/admin/accom/unit/unit.component.tns.html 	new file:   src/app/admin/accom/unit/unit.component.tns.scss 	new file:   src/app/admin/accom/unit/unit.component.ts 	modified:   src/app/admin/admin-routing.module.ts 	modified:   src/app/admin/admin.module.ts 	modified:   src/app/admin/info/mypage/mypage.component.html 	modified:   src/app/admin/info/mypage/mypage.component.scss 	modified:   src/app/admin/info/mypage/mypage.component.ts 	modified:   src/app/admin/layout/footer/footer.component.html 	modified:   src/app/admin/layout/header/header.component.html 	modified:   src/app/admin/layout/header/header.component.scss 	modified:   src/app/admin/layout/header/header.component.ts 	modified:   src/app/admin/layout/sidebar/si

--- a/src/app/admin/info/mypage/mypage.component.html
+++ b/src/app/admin/info/mypage/mypage.component.html
@@ -54,6 +54,19 @@
                     <input type="text" formControlName="Email" placeholder="이메일" 
                         [ngStyle]="{'borderColor': checkValid('Email') ? '#f00': '#ddd'}">
                     
+                    <div class="modal-content">
+                        <h3>서류 첨부</h3>
+                        <h5>필요 서류를 첨부해주세요.</h5>
+                        <div class="background-highlight">
+                            <ul class="list-decorate-dot">
+                                <li>사업자 등록증</li>
+                                <li>관광사업 등록증</li>
+                                <li>야영장사고배상책임 보험증</li>
+                                <li>통장사본</li>
+                            </ul>
+                        </div>
+                        <app-file-attach (uploaded)="syncFileList($event)" [loadedFile]="uploadFileList" [refresh]="refreshFile"></app-file-attach>
+                    </div>
                     <div class="btn-box">
                         <button mat-raised-button color="primary" *ngIf="exposeSubmit" (click)="submit()">제출</button>
                     </div>
