--- a/src/app/admin/layout/footer/footer.component.html
+++ b/src/app/admin/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer-container">
     <ul>
         <li class="footer-item">
-            <a routerLink="unit" [@highlight]="selected === 'unit' ? 'active' : 'deactive'" (click)="selected = 'unit'">
+            <a routerLink="accom" [@highlight]="selected === 'unit' ? 'active' : 'deactive'" (click)="selected = 'unit'">
                 <i class="fa fa-key"></i><br>
             </a>
         </li>
