--- a/src/app/admin/info/mypage/mypage.component.scss
+++ b/src/app/admin/info/mypage/mypage.component.scss
@@ -7,3 +7,14 @@
 .mat-panel-body{
     margin-top: 20px;
 }
+
+.background-highlight{
+    background-color: #ddd;
+    padding: 1px 0;
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+    li{
+        cursor: initial;
+    }
+}
